src/test/deca/etapeA/invalid/lexer/lex_lit_int_1.deca
// Description:
//    test du lexeur pour les litéraux entiers
//    vérifie la bonne formation du litéral
//
// Resultats:
// erreur syntaxique
// Ligne <9> : <syntaxError>

00


